Cleanup and tweaking of cookie.js

--- a/html/demo/index.html
+++ b/html/demo/index.html
@@ -79,6 +79,17 @@
       </div>
 
       <div class="masthead row">
+        <nav aria-label="You are here:" role="navigation">
+          <ul class="breadcrumbs">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Parent</a></li>
+            <li class="disabled">Disabled</li>
+            <li>
+              <span class="show-for-sr">Current: </span> This page
+            </li>
+          </ul>
+        </nav>
+
         <!-- local-title -->
         <div class="columns medium-7" id="local-title">
           <h1><a href="[service-url]" title="Back to [service-name] homepage">Compliance Templates</a></h1>
@@ -127,20 +138,9 @@
 
        <section>
 
-         <nav aria-label="You are here:" role="navigation">
-           <ul class="breadcrumbs">
-             <li><a href="#">Home</a></li>
-             <li><a href="#">Parent</a></li>
-             <li class="disabled">Disabled</li>
-             <li>
-               <span class="show-for-sr">Current: </span> This page
-             </li>
-           </ul>
-         </nav>
-
           <h2>Fluid Width</h2>
 
-          <div class="row">
+          <div class="row serif">
 
             <div class="large-6 columns">
               <h3>Code</h3>
