--- a/html/documentation/index.html
+++ b/html/documentation/index.html
@@ -142,8 +142,7 @@
 
           <div class="row">
 
-
-            <div class="columns medium-9 medium-push-3">
+            <div class="serif columns medium-9 medium-push-3">
               <p>This collection of materials will give you guidance on how to build web pages and content that comply with EMBL-EBI:</p>
               <ul>
                 <li>visual look</li>
