Adds sample block quote

--- a/html/demo/index.html
+++ b/html/demo/index.html
@@ -228,7 +228,11 @@
                   <span class="float-right secondary label sans-serif"><i class="icon icon-generic" data-icon="i"></i> Framework version: 1.1</span>
                   <h3>How to use this</h3>
                   <p>Use this as page and it's associated assets as your boilerplate. Read through the text and draw on the examples. Use your browser's web inspector and view the source.</p>
-                  <p>This guide does not offer prescriptive solutions for every scenario, but intends to show you how things should be done -- it incorporates the philosophy of "do as I act, not as I say".</p>
+                  <blockquote class="float-left">
+                    Do as I do, not as I say.
+                    <cite>This Framewok</cite>
+                  </blockquote>
+                  <p>This guide does not offer prescriptive solutions for every scenario, but integrates a wide range of pullquotes, form boxes, menus, and more to show you how things should be done.</p>
                   <p>Also <a href="http://foundation.zurb.com/sites/docs/global.html">consult the Foundation 6 docs <i class="icon icon-generic" data-icon="x"></i></a>, as this framework leverages that toolset.</p>
                   <p>During the initial rollout, we plan to host workshops to educate on the tooling and address issues or concerns, register you interest here [ADD LINK]</p>
                   <p>If you need technical guidance or have questions, <a href="#help">see the help section</a>.</p>
