--- a/html/index.html
+++ b/html/index.html
@@ -15,28 +15,28 @@
   <link rel="dns-prefetch" href="//embl.de" />
 
   <!-- Place any custom favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-  <link rel="icon" type="image/x-icon" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/favicon.ico" />
-  <link rel="icon" type="image/png" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="192×192" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/android-chrome-192x192.png" /> <!-- Android (192px) -->
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-114x114.png"> <!-- For iPhone 4 Retina display (114px) -->
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-72x72.png"> <!-- For iPad (72px) -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-144x144.png"> <!-- For iPad retinat (144px) -->
-  <link rel="apple-touch-icon-precomposed" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-57x57.png"> <!-- For iPhone (57px) -->
-  <link rel="mask-icon" href="../../move-to-cdn/images/logos/EMBL-EBI/favicons/safari-pinned-tab.svg" color="#ffffff"> <!-- Safari icon for pinned tab -->
+  <link rel="icon" type="image/x-icon" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/favicon.ico" />
+  <link rel="icon" type="image/png" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192×192" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/android-chrome-192x192.png" /> <!-- Android (192px) -->
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-114x114.png"> <!-- For iPhone 4 Retina display (114px) -->
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-72x72.png"> <!-- For iPad (72px) -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-144x144.png"> <!-- For iPad retinat (144px) -->
+  <link rel="apple-touch-icon-precomposed" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/apple-icon-57x57.png"> <!-- For iPhone (57px) -->
+  <link rel="mask-icon" href="../move-to-cdn/images/logos/EMBL-EBI/favicons/safari-pinned-tab.svg" color="#ffffff"> <!-- Safari icon for pinned tab -->
   <meta name="msapplication-TileColor" content="#2b5797"> <!-- MS Icons -->
-  <meta name="msapplication-TileImage" content="../../move-to-cdn/images/logos/EMBL-EBI/favicons/mstile-144x144.png">
+  <meta name="msapplication-TileImage" content="../move-to-cdn/images/logos/EMBL-EBI/favicons/mstile-144x144.png">
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
-  <link rel="stylesheet" href="../../move-to-cdn/css/ebi-global.css" type="text/css" media="all">
-  <link rel="stylesheet" href="../../move-to-cdn/fonts/fonts.css" type="text/css" media="all">
+  <link rel="stylesheet" href="../move-to-cdn/css/ebi-global.css" type="text/css" media="all">
+  <link rel="stylesheet" href="../move-to-cdn/fonts/fonts.css" type="text/css" media="all">
 <!--   <link rel="stylesheet" href="http://www.ebi.ac.uk/web_guidelines/css/compliance/develop/984-24-col-fluid.css" type="text/css" media="screen"> -->
 
-  <link rel="stylesheet" href="../../move-to-cdn/libraries/foundation-6/css/foundation.css" type="text/css" media="all">
+  <link rel="stylesheet" href="../move-to-cdn/libraries/foundation-6/css/foundation.css" type="text/css" media="all">
 
   <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
-  <link rel="stylesheet" href="../../move-to-cdn/css/embl-petrol-colours.css" type="text/css" media="all">
+  <link rel="stylesheet" href="../move-to-cdn/css/embl-petrol-colours.css" type="text/css" media="all">
 
   <!-- for production the above can be replaced with -->
   <!--
@@ -47,7 +47,7 @@
 
 
   <!-- All JavaScript at the bottom, except for Modernizr -->
-  <script src="../../move-to-cdn/libraries/modernizr/modernizr.custom.49274.js"></script>
+  <script src="../move-to-cdn/libraries/modernizr/modernizr.custom.49274.js"></script>
 
 </head>
 
@@ -1017,7 +1017,7 @@ Base font size for body text is 13px with a line height of 20px. Across the site
   <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.10.2.min.js"><\/script>')</script>
   -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="../../move-to-cdn/libraries/foundation-6/js/foundation.js"></script>
+  <script src="../move-to-cdn/libraries/foundation-6/js/foundation.js"></script>
   <script type="text/JavaScript">$(document).foundation();</script>
   <!--
    -->
@@ -1027,8 +1027,8 @@ Base font size for body text is 13px with a line height of 20px. Across the site
   <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/plugins.js"></script>
   <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/script.js"></script>
   -->
-  <script defer="defer" src="../../move-to-cdn/js/cookiebanner.js"></script>
-  <script defer="defer" src="../../move-to-cdn/js/foot.js"></script>
+  <script defer="defer" src="../move-to-cdn/js/cookiebanner.js"></script>
+  <script defer="defer" src="../move-to-cdn/js/foot.js"></script>
 
   <!-- Google Analytics details... -->
   <!-- Change UA-XXXXX-X to be your site's ID -->
