Add scroll to top, context shifting animation

--- a/documentation.html
+++ b/documentation.html
@@ -1059,6 +1059,7 @@
   -->
   <script defer="defer" src="js/cookiebanner.js"></script>
   <script defer="defer" src="js/foot.js"></script>
+  <script defer="defer" src="js/script.js"></script>
 
   <!-- Google Analytics details... -->
   <!-- Change UA-XXXXX-X to be your site's ID -->
