--- a/documentation.html
+++ b/documentation.html
@@ -307,23 +307,27 @@
                 </ol>
                 <h3><a name="global" id="global"></a>Global menu</h3>
                 <p>The global navigation menu sits at the top of every page. It is designed to be easy to find yet unobtrusive, so as not to confuse users who wish to use the navigation menu for your site.</p>
+                [UPDATE THIS IMAGE]
                 <p><img src="https://www.ebi.ac.uk/sites/ebi.ac.uk/files/images/EBI-nav-global.png" alt="EBI global navigation menu example" width="800" height="28" style="border: 0px;" /></p>
                 <h3><a name="local" id="local"></a>Local menu</h3>
+                [THIS TEXT IS FROM THE CURRENT GUIDELINES, NEEDS REVIEW]
                 <p>The local menu is the navigation menu for your website and it sits below the main banner. It is optional, since not all projects require their own menu. Since it is a horizontal menu, you need to think about the text length of labels. We recommend that your first menu link is "Home" and your last one is "About [project-name]".</p>
                 <p><img src="https://www.ebi.ac.uk/sites/ebi.ac.uk/files/images/EBI-nav-local.png" alt="EBI local navigation menu example" width="374" height="47" style="border: 0px;" /></p>
                 <h3><a name="secondary" id="secondary"></a>Secondary menus</h3>
+                [UPDATE AS WELL]
                 <p>Once the user has selected an item from your local menu, you might need to display a secondary navigation menu for that section. So that your content takes the most important position, in the top-right of the content area, we will position these secondary menus in a column on the right in a vertical list. The &lt;h3&gt; heading for this menu should match the label text selected in your local menu.</p>
                 <p><img src="https://www.ebi.ac.uk/sites/ebi.ac.uk/files/images/EBI-nav-secondary.png" alt="EBI secondary navigation menu example" width="304" height="232" style="border: 0px;" /></p>
                 <h3><a name="breadcrumb" id="breadcrumb"></a>Breadcrumb trail</h3>
                 <p>A breadcrumb can help users understand the structure of sites with a large degree of hierarchy, but you should first rely on the global header, local title, and local menu to indicate structure, using a breadcrumb only when that fails. For guidance on your information architecture, contact the web development team.</p>
                 <p><img src="https://www.ebi.ac.uk/sites/ebi.ac.uk/files/images/EBI-nav-breadcrumb.png" alt="EBI breadcrumb trail navigation example" width="228" height="149" style="border: 0px;" /></p>
+                [UPDATE IMAGE...]
                 <h3><a name="footer" id="footer"></a>Footer global menu</h3>
-                <p>In the global footer of every page there is an expanded version of the global menu, including all sub-items. This acts as a top-level sitemap, available on any page.</p>
+                <p>In the global footer of every page there is an expanded version of the global menu, including all sub-items. This acts as a top-level sitemap, available on any page. This will be automatically populated with Javascript into your <code>#global-footer</code>.</p>
                 <p><img src="https://www.ebi.ac.uk/sites/ebi.ac.uk/files/images/EBI-nav-footer.png" alt="EBI expanded global navigation menu in footer example" width="800" height="213" style="border: 0px;" /></p>
               </section>
 
               <section id="menus" data-magellan-target="menus">
-                <h2>menus</h2>
+                <h2>Menus</h2>
               </section>
 
               <section id="breadcrumbs" data-magellan-target="breadcrumbs">
@@ -331,7 +335,7 @@
               </section>
 
               <section id="content" data-magellan-target="content">
-                <h2>content</h2>
+                <h2>Content</h2>
               </section>
 
               <section id="grid" data-magellan-target="grid">
@@ -343,7 +347,7 @@
               </section>
 
               <section id="colour" data-magellan-target="colour">
-                <h2>colour</h2>
+                <h2>Colour</h2>
                 A consistent approach to using colour way is another way in which we can achieve a consistent EBI "look". You can use a standard reday-made colour palette that we provide or some projects may want to use a custom palette.
 
                 In either case, the way that that palette is constructed and the way in which each colour from that palette is used will be the same for everyone.
