Comment out custom.css
This only applies to template page.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
   <!-- CSS concatenated and minified via ant build script-->
   <link rel="stylesheet" href="//khawkins98.github.io/EBI-Framework/css/ebi-global.css" type="text/css" media="all">
   <link rel="stylesheet" href="//khawkins98.github.io/EBI-Framework/fonts/fonts.css" type="text/css" media="all">
-
   <link rel="stylesheet" href="//khawkins98.github.io/EBI-Framework/libraries/foundation-6/css/foundation.css" type="text/css" media="all">
 
   <!-- Use this CSS file for any custom styling -->
-  <link rel="stylesheet" href="../css/custom.css" type="text/css" media="all">
+  <!--
+    <link rel="stylesheet" href="css/custom.css" type="text/css" media="all">
+  -->
 
     <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
